--- a/bootstrap/default.yaml
+++ b/bootstrap/default.yaml
@@ -33,7 +33,7 @@
   :name: net_172
   :type: fixed
   :bridge: br0
-  :dns: 172.16.77.1
+  :dns: 8.8.8.8 8.8.4.4
   :leases:
     - 172.16.77.200
     - 172.16.77.201
