support new AR in onebootrap/net

--- a/bootstrap/default.yaml
+++ b/bootstrap/default.yaml
@@ -31,19 +31,12 @@
 
 - :class: :net
   :name: net_172
-  :type: fixed
+  :type: ip4
   :bridge: br0
   :dns: 8.8.8.8 8.8.4.4
-  :leases:
-    - 172.16.77.200
-    - 172.16.77.201
-    - 172.16.77.202
-    - 172.16.77.203
-    - 172.16.77.204
-    - 172.16.77.205
-    - 172.16.77.206
-    - 172.16.77.207
-
+  :ar:
+    - :ip: 172.16.77.200
+      :size: 8
 
 - :class: :template
   :name: c6
